# swiftmovers

./: .dockerignore  .env  .jwt_key.pem  .pylintrc  Dockerfile  LICENSE  README.md  SALEOR-LISCENSE  architecture  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: azure-container-webapp.yml  cleanEnvironments.js  cypress-repeat.yml  deploy-and-run-cypress.yml  deploy-cloud.yaml  deploy-demo-staging.yaml  deploy-demo.yaml  deploy-gcp.yml  deploy-master-staging.yaml  deploy-staging.yaml  e2e.yml  master_swiftmovers-api.yml  percy-demo-tests.yml  push-container-to-registry.yml  test-env-cleanup.yml  test-env-deploy.yml  tests-nightly.yml
client/: .codeclimate.yml  .dependency-cruiser.js  .env.template  .gitignore  CODEOWNERS  Dockerfile  README.md  apollo.config.js  app.json  introspection.json  package-lock.json  package.json  schema.graphql  tsconfig.json  types.d.ts  vite.config.js
client/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
client/.storybook/: preview-head.html  preview.tsx
client/.tx/: config
client/docs/: configuration.md  deployment.md  docker.md  error-tracking.md
client/locale/: ar.json  az.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  defaultMessages.json  el.json  es.json  es_CO.json  et.json  fa.json  fr.json  hi.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  ko.json  mn.json  nb.json  nl.json  pl.json  pt.json  pt_BR.json  ro.json  ru.json  sk.json  sl.json  sq.json  sr.json  sv.json  th.json  tr.json  uk.json  vi.json  (+2 more)
client/src/: config.ts  debug.ts  index.html  index.tsx  intl.ts  misc.ts  themeOverrides.ts  types.ts
client/testUtils/: setup.ts  wrapper.tsx
swiftmovers/: __init__.py  __main__.py  asgi.py  celeryconf.py  schema.py  settings.py  urls.py  wsgi.py
swiftmovers/account/: __init__.py  app.py  models.py  notifications.py
swiftmovers/accounts/: __init__.py  apps.py  error_codes.py  models.py  validators.py
swiftmovers/app/: app_manifest_sample.json  error_codes.py  headers.py  (+2 more)
(+1746 files in other folders)
