[tool.poetry]
name = "swiftmovers"
version = "0.1.0"
description = "This is logistics service built on Django, Graphql and Nextjs"
authors = ["michael <raniahgobz@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/michaelgobz/swiftmovers"
homepage = ""
documentation = ""
keywords = ["django", "graphql", "nextjs", "swiftmovers", 
"zone", "logistics", "delivery", "ecommerce", "payment", "payment gateway"]
[tool.poetry.dependencies]
python = "^3.11"
django = "=4.1.7"
babel = "=2.10.3"
graphene-django = "=2.7.0"
django-prices = "=2.3.0"
django-prices-openexchangerates = "=1.2.0"
django-filter = "=22.1"
django-graphql-jwt = "=0.3.4"
cryptography = "=3.4.8"
django-phonenumber-field = "=5.2.0"
mysql-connector-python = "=8.0.27"
rave_python = "=1.2.16"
redis = "=4.5.1"
django-countries = "=7.5.1"
psycopg2 = "=2.9.1"
gunicorn = "=20.1.0"
dj-database-url = "=0.5.0"
celery = "~5.2.7"
graphene= "=2.1.9"
graphql-relay= "=2.0.1"
uvicorn = "~0.19.0"
Cython = "~0.29.24"
graphql-core = "=2.3.2"
pytimeparse  = "~1.1.8"
opentracing = "~2.4.0"
PyJWT = "~2.6.0"
asgiref = "=3.6.0"
phonenumbers = "~8.12.34" 
google-i18n-address = "=2.5.2"
prices = "=1.0.0"
django-measurement = "=3.2.4"
measurement = "=3.2.0"
urllib3 = "=1.26.12"
pyparsing = "=2.0.3"
promise = "=2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
pycodestyle = "^2.5"
pydocstyle = "^6.1"
pylint = "^2.8.3"
pylint-celery = "^0"
pylint-django = "^2.4.4"
pylint-plugin-utils = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
include = "\\.pyi?$"
exclude = """
/(\\.git/
  |\\.eggs
  |\\.hg
  |__pycache__
  |\\.cache
  |\\.ipynb_checkpoints
  |\\.mypy_cache
  |\\.pytest_cache
  |\\.tox
  |\\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
"""
